Infruastructure with a terraform model for a staging deployment
