# frontend/openapi.json
@@ -1014,11 +1014,10 @@
               { "type": "null" }
             ],
             "title": "Description"
-          },
-          "rdf_content": { "type": "string", "title": "Rdf Content" }
+          }
         },
         "type": "object",
-        "required": ["title", "rdf_content"],
+        "required": ["title"],
         "title": "AppModelCreate"
       },
       "AppModelPublic": {
@@ -1049,10 +1048,13 @@
             ],
             "title": "Created At"
           },
-          "knowledge_graph": { "title": "Knowledge Graph", "default": {} }
+          "knowledge_graph_rdf": {
+            "type": "string",
+            "title": "Knowledge Graph Rdf"
+          }
         },
         "type": "object",
-        "required": ["title", "id", "owner_id"],
+        "required": ["title", "id", "owner_id", "knowledge_graph_rdf"],
         "title": "AppModelPublic"
       },
       "AppModelUpdate": {
@@ -1071,12 +1073,14 @@
             ],
             "title": "Description"
           },
-          "rdf_content": {
-            "anyOf": [{ "type": "string" }, { "type": "null" }],
-            "title": "Rdf Content"
+          "knowledge_graph_rdf": {
+            "type": "string",
+            "minLength": 2,
+            "title": "Knowledge Graph Rdf"
           }
         },
         "type": "object",
+        "required": ["knowledge_graph_rdf"],
         "title": "AppModelUpdate"
       },
       "AppModelsPublic": {
