# llm-model-generator/app/alembic/versions/fb3473960be7_json_ld_and_rdf_format_for_the_same_.py
@@ -1,0 +1,36 @@
+"""JSON-LD and RDF format for the same knowledge graph
+
+Revision ID: fb3473960be7
+Revises: 0714154983d4
+Create Date: 2026-03-19 14:20:09.020083
+
+"""
+from typing import Sequence, Union
+
+from alembic import op
+import sqlalchemy as sa
+from sqlalchemy.dialects import postgresql
+
+# revision identifiers, used by Alembic.
+revision: str = 'fb3473960be7'
+down_revision: Union[str, Sequence[str], None] = '0714154983d4'
+branch_labels: Union[str, Sequence[str], None] = None
+depends_on: Union[str, Sequence[str], None] = None
+
+
+def upgrade() -> None:
+    """Upgrade schema."""
+    # ### commands auto generated by Alembic - please adjust! ###
+    op.add_column('appmodel', sa.Column('knowledge_graph_json', postgresql.JSONB(astext_type=sa.Text()), nullable=True))
+    op.add_column('appmodel', sa.Column('knowledge_graph_rdf', sa.Text(), nullable=True))
+    op.drop_column('appmodel', 'knowledge_graph')
+    # ### end Alembic commands ###
+
+
+def downgrade() -> None:
+    """Downgrade schema."""
+    # ### commands auto generated by Alembic - please adjust! ###
+    op.add_column('appmodel', sa.Column('knowledge_graph', postgresql.JSONB(astext_type=sa.Text()), autoincrement=False, nullable=True))
+    op.drop_column('appmodel', 'knowledge_graph_rdf')
+    op.drop_column('appmodel', 'knowledge_graph_json')
+    # ### end Alembic commands ###
